<resources>
    <string name="app_name">CoHaus</string>
    <!--  Permission  -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--  Navigation  -->
    <string name="navigation_Map">Map</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>
    <!--  Home  -->
    <string name="description_camera">Camera Button</string>
    <string name="description_check_list_click">CheckList Click</string>
    <string name="description_camera_image">Camera Image</string>
    <string name="label_camera_capture">Safety Capture</string>
    <string name="label_Self_checklist">Self Checklist</string>

    <!--  Profile  -->
    <string name="text_profile_name">이름</string>
    <string name="text_profile_id">아이디</string>
    <string name="description_back_icon">뒤로가기 버튼</string>
    <string name="description_more_icon">더보기 버튼</string>
    <string name="description_post_image">게시글 사진</string>
    <string name="label_setting">설정</string>
    <string name="description_setting">설정</string>
    <string name="text_info_edit">회원정보 수정</string>
    <string name="label_logout">로그아웃</string>
    <string name="label_withdrawal">회원탈퇴</string>
    <string name="description_login_circle">login_circle</string>
    <string name="label_login">로그인</string>
    <string name="label_join_membership">회원가입</string>
    <string name="hint_input_id">아이디</string>
    <string name="hint_input_password">비밀번호</string>
    <string name="description_join_image">회원가입 이미지</string>
    <string name="hint_input_name">이름</string>
    <string name="hint_input_email">이메일</string>
    <string name="label_complete">완료</string>
    <string name="description_check_box">체크박스</string>
    <string name="label_safe_checklist">안전수칙 체크리스트</string>
    <string name="label_ok">확인</string>
    <string name="label_cancel">취소</string>
    <string name="label_confirm">확인</string>
    <string name="label_report">신고</string>
    <string name="label_save">저장</string>
    <string name="label_report_message_bold">신고하시겠습니까?</string>
    <string name="label_report_message_save">신고 시 해당 기록이 저장됩니다.</string>
    <string name="description_safe_image">안전한 사진 아이콘</string>
    <string name="description_warning_image">위험한 사진 아이콘</string>
    <string name="label_warning">Warning</string>
    <string name="label_safety">Safety</string>
    <string name="hint_phone_number">전화번호</string>
    <string name="label_record_save">기록 저장</string>
    <string name="hint_input_record_title">제목을 입력하세요</string>
    <string name="hint_input_record_content">내용을 입력하세요</string>
    <string name="label_record_save_button">저장하기</string>
    <string name="description_user_state">user state image</string>
    <string name="text_repair_apply_list">수리 신청 목록</string>
    <string name="description_repair_list_arrow">수리 신청 목록 화면 이동 아이콘</string>
    <string name="text_save_list">저장 목록</string>
    <string name="text_ai_diagnosis">AI 진단하러 가기</string>
    <string name="text_general_repair_apply_go">일반 수리 신청</string>
    <string name="text_how_to_use">이용 방법</string>
    <string name="text_detail_repair">수리 신청하기</string>
    <string name="text_detail_edit">수정하기</string>
    <string name="text_detail_delete">삭제하기</string>
    <string name="text_volunteer_registration">봉사자 등록</string>
    <string name="description_home_image">home main image</string>
    <string name="text_diagnosis_ai_result">AI 진단 결과</string>
    <string name="text_map_search">찾아보기</string>
    <string name="label_user_repair_apply">수리 신청할게요</string>
    <string name="text_user_repair_apply">수리 신청</string>
    <string name="hint_visit_date_format">2024 / 01 / 01</string>
    <string name="description_calendar_image">방문일자 입력 이미지</string>
    <string name="label_location_setting_next">다음</string>
    <string name="text_repair_apply_info">수리 신청 정보</string>
    <string name="text_repair_apply_date">수리신청일</string>
    <string name="description_repair_apply_date_icon">수리 신청일 아이콘</string>
    <string name="description_category_box_icon">카테고리 박스 아이콘</string>
    <string name="text_wait_comment">봉사자님을 기다리고 있어요 :)</string>
    <string name="text_apply_detail_info">신청 상세 정보</string>
    <string name="description_visit_date_icon">방문 희망일 아이콘</string>
    <string name="text_wish_visit_date">방문 희망일</string>
    <string name="description_apply_location_address">신청 주소 아이콘</string>
    <string name="text_apply_address">신청 주소</string>
    <string name="text_view_apply_info">신청 정보 보기</string>
    <string name="label_info_modify">회원정보 수정</string>
    <string name="label_modify">수정하기</string>
    <string name="description_coHous">코하우스 텍스트</string>
    <string name="text_reocrd_detail_modify">기록 수정</string>
    <string name="description_use_guide">이용 방법 아이콘</string>
    <string name="description_basic_capture">일반 수리 신청 아이콘</string>
    <string name="description_ai_capture">ai 진단 아이콘</string>
    <string name="label_volunteer_apply_button">봉사 신청하기</string>
    <string name="text_meet_volunteer">님을 만날 예정입니다.</string>
    <string name="description_volunteer_image">봉사자 이미지</string>
    <string name="text_volunteer_info">봉사자 정보</string>
    <string name="description_tel_icon">전화 아이콘</string>
    <string name="text_find_volunteer">잠시만 기다려주세요\n봉사자를 찾는중입니다</string>
    <string name="description_question_mark">물음표 마크</string>
    <string name="description_find_volunteer_image">봉자사를 찾는 아이콘</string>
    <string name="text_proceed_volunteer_list">진행 봉사 목록</string>
    <string name="text_complete_volunteer_list">완료 봉사 목록</string>
    <string name="text_map_repair_apply">\'%s\'을\n신청하시겠습니까?</string>
    <string name="text_repair_apply_message">신청 시 취소가 어렵습니다.\n신청자님과의 약속을 꼭 지켜주세요.</string>
    <string name="text_volunteer_registration_complete">감사합니다 :)\n봉사자 등록이 완료되었습니다!</string>
    <string name="description_volunteer_registration_image">봉사자 등록 확인 이미지</string>
    <string name="description_waste_eco">폐기물 처리 아이콘</string>
    <string name="text_waste_eco_message_first">폐기물이 발생했나요?\n폐기물 처리 시설을 찾아드릴게요.</string>
    <string name="text_waste_eco_message_second">폐기물 처리 시설에서 폐기물을 처리하고\n환경 보호에 동참해보세요:)</string>
    <string name="text_no_ok">괜찮아요</string>
    <string name="text_find">찾아보기</string>
    <string name="description_join_complete_message">회원가입 완료 이미지</string>
    <string name="text_join_complete_message">회원가입 완료!\n%s님 환영합니다.</string>
    <string name="text_start_service">서비스 시작하기</string>
    <string name="description_use_guide_image">이용 방법 가이드 이미지</string>
    <string name="description_ai_mark">ai 마크</string>
    <string name="text_volunteer_type_select">유형 선택</string>
    <string name="text_single_volunteer">개인 봉사자에요</string>
    <string name="text_organization_volunteer">단체에 소속되어 있어요</string>
    <string name="text_input_organization_name">기관 입력</string>
    <string name="text_input_organization_guide">*기관 또는 단체에 소속되어 있는 경우 필수입니다.</string>
    <string name="text_registration_volunteer">봉사자로 등록합니다</string>
    <string name="text_view_info">정보 보기</string>
    <string name="text_category">카테고리</string>
    <string name="text_apply">신청하기</string>
    <string name="text_complete">완료하기</string>
</resources>