<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_28dp">

    <TextView
        android:id="@+id/tv_report_message_Bold"
        style="@style/customTextViewFontStyle.Bold.S24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/label_report_message_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_report_message_save"
        style="@style/customTextViewFontStyle.Bold.S18.gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/label_report_message_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_report_message_Bold"
        app:layout_constraintTop_toBottomOf="@id/tv_report_message_Bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_report_cancel"
        style="@style/customTextViewFontStyle.Bold.S18.gray400"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button_gray"
        android:text="@string/label_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_report_message_save" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_report_confirm"
        style="@style/customTextViewFontStyle.Bold.S18.green300"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button_green"
        android:text="@string/label_report"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_report_message_save" />

</androidx.constraintlayout.widget.ConstraintLayout>